tests/snapshots/human_transcripts__anchor.snap
---
source: tests/human_transcripts.rs
expression: normalized
---
repo is at the default branch's tip
  fetch  ok
  build  ok
