tests/snapshots/human_transcripts__config.snap
---
source: tests/human_transcripts.rs
expression: "normalize(h, &output.stdout)"
---
Effective config for repo/work
  key          scope  layer   value
  adapters     .      merged  -
  bin          .      merged  bin
  copy         .      merged  
  detect       .      merged  depth, ignore
  dirs         .      merged  -
  env          .      merged  
  files        .      merged  -
  ports        .      merged  
  seed         .      merged  
  sync_inputs  .      merged  README.md
  task         .      merged  build, fmt, hello, lint, service, sync, test
