tests/snapshots/human_transcripts__list.snap
---
source: tests/human_transcripts.rs
expression: "normalize(h, &output.stdout)"
---
Registered trees
  target     phase  branch  sync   path
  repo       ready  main    never  <ROOT>/repos/repo
  repo/work  ready  work    never  <ROOT>/wt-home/trees/repo/work
