tests/snapshots/human_transcripts__new.snap
---
source: tests/human_transcripts.rs
expression: normalized
---
Created repo/work
  path    <ROOT>/wt-home/trees/repo/work
  branch  work
  sync    skipped
build started  <ROOT>/wt-home/trees/repo/work/.wt/logs/wt-setup.log
