tests/snapshots/human_transcripts__remove.snap
---
source: tests/human_transcripts.rs
assertion_line: 282
expression: normalized
---
Removed repo/work
  destroyed  1
  branch     deleted
  session    closed
